--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
     This is a new repo 
 </P>
 
-<p>this a new feature</p>
+<p>this a new feature (dropdown)</p>
 <p>this is also a new feature2</p>
